feat: update meta for mainnet fork
